--- a/codebase/static/css/portfolio.css
+++ b/codebase/static/css/portfolio.css
@@ -22,7 +22,7 @@
 }
 .top-section-title {
   color: #00728E;
-  margin-top: 2em;
+  margin-top: 1em;
   font: 40px/150% 'roboto_condensedbold';
 }
 .top-section-desc {
